Bug 310899 - [Designer] source code QA using FindBugs